A painful commit. frontend : authenticate method now embed a well formated body.
back : CrossOrigin and CORS policy setup.

maven : fix a bad build where the ng app was not compiled.